final: revised & cleaned html/css files

--- a/contact.html
+++ b/contact.html
@@ -11,13 +11,13 @@
 <body>
 <!--CHECK INDENTATION HERE-->
 <header>
-    <div class="navContent">
+    <div class="headerContent">
         <div class="mainLogo">
             <h1>Carmen Lucero Sandoval De Jesus</h1>
         </div>
     
             <nav>
-                <ul class="menu">
+                <ul>
                     <li><a href="index.html">About Me</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -31,7 +31,7 @@
 <div class="container">
 
     <!-- "This section will hold all of our paragraphs and inner div's" -->
-    <section id="contactMeInvite">
+    <section>
         <h2>Say Hello!<br>I will get back to you soon!</h2>
         <hr>
 
